Fix restclient